# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\API\V1\Auth\RegisterController;
+use App\Http\Controllers\API\V1\EventController;
 use App\Http\Controllers\API\V1\TaskController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -18,12 +19,22 @@ use Illuminate\Support\Facades\Route;
 
 Route::middleware([\App\Http\Middleware\LogRequestsMiddleware::class])->group(function () {
     Route::prefix('v1')->group(function () {
-        Route::post('/register', [RegisterController::class, 'register']);
 
-        Route::get('/tasks', [TaskController::class, 'index']);
-        Route::post('/tasks', [TaskController::class, 'store'])->middleware('basic.auth');
-        Route::get('/tasks/{task}', [TaskController::class, 'show'])->middleware('basic.auth');
-        Route::put('/tasks/{task}', [TaskController::class, 'update'])->middleware('basic.auth');
-        Route::delete('/tasks/{task}', [TaskController::class, 'destroy'])->middleware('basic.auth');
+        Route::prefix('tasks')->group(function () {
+            Route::get('/', [TaskController::class, 'index']);
+            Route::post('/', [TaskController::class, 'store'])->middleware('basic.auth');
+            Route::get('/{task}', [TaskController::class, 'show'])->middleware('basic.auth');
+            Route::put('/{task}', [TaskController::class, 'update'])->middleware('basic.auth');
+            Route::delete('/{task}', [TaskController::class, 'destroy'])->middleware('basic.auth');
+        });
+
+
+        Route::prefix('events')->group(function () {
+            Route::post('/', [EventController::class, 'create']);
+            Route::delete('/{id}', [EventController::class, 'delete']);
+        });
+
+
+        Route::post('/register', [RegisterController::class, 'register']);
     });
 });
