# storage/api-docs/api-docs.json
@@ -91,6 +91,74 @@
                 }
             }
         },
+        "/api/v1/events": {
+            "post": {
+                "tags": [
+                    "Events"
+                ],
+                "summary": "Create a new event",
+                "description": "Create a new event",
+                "operationId": "createEvent",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Event"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Event created successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Event"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "basicAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/events/{id}": {
+            "delete": {
+                "tags": [
+                    "Events"
+                ],
+                "summary": "Delete an existing event",
+                "description": "Delete an existing event",
+                "operationId": "deleteEvent",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Event ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Event deleted successfully"
+                    }
+                },
+                "security": [
+                    {
+                        "basicAuth": []
+                    }
+                ]
+            }
+        },
         "/api/v1/tasks": {
             "get": {
                 "tags": [
@@ -264,6 +332,47 @@
     },
     "components": {
         "schemas": {
+            "Event": {
+                "title": "Event",
+                "description": "Event model",
+                "properties": {
+                    "id": {
+                        "title": "ID",
+                        "description": "ID of the event",
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "name": {
+                        "title": "Name",
+                        "description": "Name of the event",
+                        "type": "string",
+                        "example": "Birthday Party"
+                    },
+                    "description": {
+                        "title": "Description",
+                        "description": "Description of the event",
+                        "type": "string",
+                        "example": "A celebration for John's birthday",
+                        "nullable": true
+                    },
+                    "start_date": {
+                        "title": "Start Date",
+                        "description": "Start date of the event",
+                        "type": "string",
+                        "example": "2024-01-28 08:00:00"
+                    },
+                    "end_date": {
+                        "title": "End Date",
+                        "description": "End date of the event",
+                        "type": "string",
+                        "example": "2024-01-28 18:00:00"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Event"
+                }
+            },
             "Task": {
                 "description": "Task model",
                 "required": [
